--- a/index.html
+++ b/index.html
@@ -13,9 +13,27 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/Logo.svg" alt="Spots logo" class="header__logo" />
+        <img src="./images/logo.svg" alt="Spots logo" class="header__logo" />
       </header>
-      <main class="content"></main>
+      <main class="content">
+        <section class="profile page__section">
+          <img
+            src="./images/avatar.jpg"
+            alt="Bessie Coleman "
+            class="profile__avatar"
+          />
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button class="profile__edit-btn">
+              <img src="./images/pencil.svg" alt="pencil icon" />Edit Profile
+            </button>
+          </div>
+          <button class="profile__add-btn">
+            <img src="./images/plus.svg" alt="plus icon" />New Post
+          </button>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
