Footer Added + Card Updates

--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
           </ul>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <p class="copyright">2023 © Spots</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
