--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Samantha Pollard" />
     <meta name="keywords" content="HTML, CSS, ???" />
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <title>Spots</title>
   </head>
   <body>
