--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </main>
       <footer class="footer">
         <div class="footer__content">
-          <p class="copyright">2023 © Spots</p>
+          <p class="footer__copyright">2023 © Spots</p>
         </div>
       </footer>
     </div>
