--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
           <button type="button" class="modal__close-btn">X</button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
-            <label for="profile-name-input" class="modal__label">
+            <label for="profile-name-input" class="modal__label"
+              >Name:
               <input
                 id="profile-name-input"
                 type="text"
@@ -124,7 +125,8 @@
                 placeholder="Type your name"
               />
             </label>
-            <label for="profile-description-input" class="modal__label">
+            <label for="profile-description-input" class="modal__label"
+              >Description:
               <input
                 id="profile-description-input"
                 type="text"
