--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">X</button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
           <form class="modal__form">
             <label for="card-image-input" class="modal__label"
