--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <p class="footer__copyright">2023 © Spots</p>
         </div>
       </footer>
-      <div class="modal modal_is-opened">
+      <div class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">X</button>
           <h2 class="modal__title">Edit profile</h2>
@@ -152,11 +152,10 @@
                 placeholder="Place a link to the picture"
               />
             </label>
-            <!-- ToDo - Update Label / Input pair -->
-            <label for="profile-description-input" class="modal__label"
+            <label for="profile-caption-input" class="modal__label"
               >Description:
               <input
-                id="profile-description-input"
+                id="profile-caption-input"
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
